tests/machine/x/ocaml/string_prefix_slice.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_prefix_slice.ml", line 23, characters 35-37:
23 |   print_endline (__show ((List.nth s1 0 = prefix)));
                                        ^^
Error: This expression has type string but an expression was expected of type
         'a list


Context (around line 23):
  21 | 
  22 | let () =
  23 |   print_endline (__show ((List.nth s1 0 = prefix)));
  24 |   print_endline (__show ((List.nth s2 0 = prefix)));
  25 | 
